--- a/css/style.css
+++ b/css/style.css
@@ -8,17 +8,15 @@
     border: 1px green solid;
 }
 
-
 header{
-    height: 470px;
+    height: 600px;
     background-color: darkseagreen;
 }
-
 
 /* navbar */
 
 nav{
-    height: 50px;
+    height: 60px;
 }
 
 #fixed-navbar{
@@ -56,6 +54,141 @@ nav{
     height: 100%;
 }
 
+
+/* header */
+
+#title-container{
+    background-color:yellowgreen;
+
+    max-width: 1200px;
+    margin-top: 30px;
+    margin-left: auto;
+    margin-right: auto;
+    height: 510px;
+
+    padding: 20px;
+}
+
+.header-row{
+    background-color: lawngreen;
+
+    margin-top: 10px;
+
+    height: 80%;
+
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    flex-flow: row wrap;
+    gap: 10px;
+}
+
+#title-container h1{
+    font-size: 50px;
+    padding: 20px;
+}
+
+.header-image{
+    background-color: forestgreen;
+    width: 50%;
+    height: 90%;
+
+}
+
+.header-paragraph{
+    background-color: forestgreen;
+    width: 30%;
+    height: 90%;
+}
+
+
+/* main */
+
+
+.centered{
+    max-width: 1000px;
+    margin: 60px auto;
+
+    background-color: aquamarine;
+}
+
+.container{
+    background-color: aqua;
+    width: 900px;
+    margin: 10px auto;
+
+    padding: 10px;
+}
+
+.columned{
+    height: 900px;
+}
+
+.columned-title{
+    background-color: turquoise;
+
+    height: 150px;
+}
+
+#columns{
+    background-color: lightgreen;
+    margin-top: 10px;
+   
+    height: 700px;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: stretch flex-start;
+
+    gap: 10px;
+    padding: 10px;
+    
+}
+
+.column{
+    width: calc(100% /3);
+    background-color: greenyellow;
+}
+
+/* sotto-colonne */
+
+.under{
+    height: 300px;
+    margin-top: 10px;
+}
+
+.border{
+    background-color: greenyellow;
+}
+
+.row{
+    width: 100%-20px;
+    height: 100%;
+    padding: 10px;
+}
+
+/* immagine e testo */
+
+.img-text{
+    height: 500px;
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+
+.img{
+    flex-grow: 1;
+    height: 100%;
+}
+
+.text{
+
+    flex-shrink: 1;
+    width: 40%;
+    height: 100%;
+}
+
+/* images - texts  */
 
 
 
