--- a/css/style.css
+++ b/css/style.css
@@ -5,13 +5,12 @@
 }
 
 .debug *{
-    border: 1px green solid;
+    outline: 0.5px green solid;
 
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
 
 header{
-    background-color: #b4d0e7;
     height: 600px;
 }
 
@@ -23,6 +22,12 @@ button{
     padding: 5px 10px;
 
     border: transparent;
+}
+
+
+.centered{
+    max-width: 1000px;
+    margin: 170px auto;
 }
 
 /* navbar */
@@ -79,33 +84,33 @@ button{
 /* header */
 
 #jumbotron{
-    max-width: 80%;
-    margin: 40px auto;
-
-    padding: 10px;
+    padding-top: 120px;
+    background-color: #b4d0e7;
 }
 
-.header-row{
-    margin: 40px 0 80px 0;
+.title-content{
+    max-width: 80%;
+    margin: 0 auto;
+}
 
+.header-box{
     display: flex;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
     flex-flow: row wrap;
+    gap: 5px;
 }
 
 #jumbotron h1{
     font-size: 60px;
 
-    padding: 30px 0 0 0;
-
     max-width: 80%;
-    margin: auto;
+    margin: 0 auto;
 }
 
 .header-paragraph{
-    width: 30%;
-    height: 90%;
+    max-width: 30%;
+    overflow: hidden;
 }
 
 .header-paragraph *{
@@ -113,15 +118,12 @@ button{
 }
 
 .header-image{
-    width: 50%;
-}
+    width: 50%;   
 
-.header-image, .header-paragraph{
-    padding: 20px 0;
+    transform: translateY(80px);
 }
 
 .header-image img{
-    padding: 60px 0;
     width: 100%;
 }
 
@@ -133,16 +135,7 @@ button{
 
 /* main */
 
-
-.centered{
-    max-width: 1000px;
-    margin: 170px auto;
-
-    background-color: aquamarine;
-}
-
 .container{
-    background-color: aqua;
     width: 900px;
     margin: 10px auto;
 
@@ -153,7 +146,7 @@ button{
     height: 900px;
 }
 
-.first .title{
+.first .business-plan{
     background-color: turquoise;
 
     height: 150px;
