--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,15 @@
 }
 
 .debug *{
+
+    outline: 1px green solid;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.centered{
+    max-width: 1100px;
+    margin: 0 auto;
+    padding-top: 150px;
 }
 
 /* testo grigio */
@@ -67,12 +75,51 @@
 
 }
 
-.gray{
-    color: rgb(61, 61, 61);
-    text-decoration: none;
-}
-
-
 .logo img{
     width: 150px;
 }
+
+/* header */
+
+.jumbotron{
+    background-color: #b4d0e7;
+}
+
+.jumbo h1{
+    font-size: 80px;
+
+    margin-bottom: 30px;
+}
+
+.jheader{
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+}
+
+.text{
+    padding: 30px 10px;
+}
+
+.par{
+    width: 100%;
+}
+
+.image{
+    flex-grow: 1;
+    transform: translateY(80px);
+}
+
+.image img{
+    padding-top: 30px;
+    width: 100%;  
+
+}
+
+.icon i{
+    font-size: 50px;
+    margin-top: 80px;
+
+    margin-left: 20px;
+}
+
