--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,12 @@
     padding-top: 150px;
 }
 
+.container{
+    width: 90%;
+    margin: 20px auto;
+}
+
+
 /* testo grigio */
 
 .gray{
@@ -123,3 +129,26 @@
     margin-left: 20px;
 }
 
+
+/* main */
+
+.container h2{
+    font-size: 40px;
+    padding:  30px 0;
+}
+
+.round{
+    display: inline-block;
+    padding: 30px 20px;
+}
+
+.round i{
+    font-size: 20px;
+    padding-right: 5px;
+    color: gray;
+}
+
+.round:active i{
+    transform: scale(1.2);
+    color: dodgerblue;
+}
