--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,11 @@
 }
 
 
+hr{
+    width: 20%;
+    color: dimgray;
+}
+
 /* titoli e testo */
 
 
@@ -345,7 +350,13 @@ li > .fa-solid{
 }
 
 .center{
-    flex-grow: 1;
+    width: calc(100vw / 3);
+    background-color: #f5f5f5;
+    padding: 40px;
+}
+
+.center *{
+    margin-bottom: 40px;
 }
 
 .square {
@@ -360,7 +371,61 @@ li > .fa-solid{
 
 .square img{  
     width: 50%;
+    filter: invert(100%);
 }
 
 
+.center img{
+    width: 50%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* colore quadrati */
+
+
+#design{
+    background-color: #a2d39b;
+}
+
+#asu{
+    background-color: #61082b;
+}
+
+#usf{
+    background-color: #0093ce;
+}
+
+#topps{
+    background-color: #ff1c1c;
+}
+
+#wbr{
+    background-color: #d5001f;
+}
+
+#hc{
+    background-color: #b4d0e7;
+}
+
+#lp{
+    background-color: #0d2481;
+}
+
+#cc{
+    background-color: #ffd830;
+}
