--- a/css/style.css
+++ b/css/style.css
@@ -7,31 +7,36 @@
 }
 
 .debug *{
-
-    outline: 1px green solid;
+/* 
+    outline: 1px green solid; */
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .centered{
     max-width: 1100px;
     margin: 0 auto;
-    padding-top: 150px;
 }
 
 .container{
     width: 90%;
-    margin: 50px auto;
+    margin: 0 auto;
 }
 
 
 hr{
-    width: 20%;
+    width: 100px;
     color: dimgray;
+}
+
+ul{
+    list-style-type: none;
 }
 
 /* titoli e testo */
 
-
+.jumbotron{
+    padding-top: 150px;
+}
 
 .bold{
     font-weight: bold;
@@ -51,6 +56,7 @@ h3{
 
 .border{
     border: darkgray solid 1px;
+    margin: 20px 0;
 }
 
 
@@ -117,7 +123,7 @@ button{
 }
 
 .list{
-    list-style-type: none;
+
     display: flex;
     justify-content: center;
 
@@ -173,6 +179,9 @@ button{
 
 /* /header */
 
+.main{
+    margin: 100px auto;
+}
 
 #checkboxes span, i{
     padding-left: 10px;
@@ -208,7 +217,6 @@ button{
 }
 
 .card > ul{
-    list-style-type: none;
     font-size: 12px;
 }
 
@@ -355,12 +363,15 @@ li > .fa-solid{
 
 .center{
     width: calc(100vw / 3);
+    height: calc(100vw / 3);
     background-color: #f5f5f5;
     padding: 40px;
+    overflow: hidden;
 }
 
 .center *{
     margin-bottom: 40px;
+    
 }
 
 .square {
@@ -394,7 +405,8 @@ li > .fa-solid{
 #company-inner{
     width: 90%;
     margin: 0 auto;
-    padding-bottom: 90px;
+
+    padding: 150px 0;
 
     display: flex;
     justify-content: space-between;
@@ -410,10 +422,6 @@ li > .fa-solid{
     padding: 10px 60px;
     border: transparent;
 }
-
-
-
-
 
 
 /* colore quadrati */
@@ -449,4 +457,54 @@ li > .fa-solid{
 
 #cc{
     background-color: #ffd830;
+}
+
+/* faq */
+
+
+#faq h2{
+    border-bottom: solid 1px dimgray;
+}
+
+#faq .faq-content{
+    padding: 60px 0;
+    border-bottom: solid 1px dimgray;
+    position: relative;
+}
+
+#faq .fa-solid{
+    position: absolute;
+
+    top: 50px;
+    right: 10px;
+}
+
+/* footer */
+
+footer{
+    background-color: black;
+    color: white;
+}
+
+#footer-links{
+    padding: 50px 0;
+    display: flex;
+    justify-content: space-between;
+}
+
+#footer-links *{
+    padding: 8px 0;
+}
+
+
+#footer-links a{
+    color: white;
+    text-decoration: none;
+}
+
+
+#language{
+    width: 50%;
+
+    padding: 40px 0;
 }
