fix: removed outline

--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,8 @@
 }
 
 .debug *{
-
-    outline: 1px green solid;
+/* 
+    outline: 1px green solid; */
     font-family: 'Open Sans', sans-serif;
 }
 
