feat: cards container

--- a/Correzione Prova/css/style.css
+++ b/Correzione Prova/css/style.css
@@ -286,8 +286,6 @@ ul{
 
 /* ///////////////// */
 
-/* ///////////////// */
-
 /* img-text */
 
 
@@ -325,3 +323,41 @@ ul{
 }
 
 /* ///////////// */
+
+/* switch tools card */
+
+#cards-grid{
+    margin-top: 40px;
+    display: flex;
+    flex-flow: row wrap;
+}
+
+.single-card{
+    width: calc(100% / 3 - 20px);
+    height: calc(100% / 2 - 30px);
+
+    margin: 15px 10px;
+}
+
+.single-card img{
+    width: 100%;
+    display: block;
+}
+
+.single-card h3{
+    padding: 10px 0;
+}
+
+
+/* clients content */
+
+#clients h2{
+    width: 60%;
+}
+
+#discover{
+    margin: 90px 0;
+}
+
+
+/* /////////////////////// */
