--- a/Correzione Prova/css/style.css
+++ b/Correzione Prova/css/style.css
@@ -361,3 +361,90 @@ ul{
 
 
 /* /////////////////////// */
+
+
+/* colored boxes logo - featured */
+
+#featured{
+    display: flex;
+}
+
+#center, #left, #right{
+    width: calc(100vw / 3);
+    height: calc(100vw / 3);
+}
+
+#left, #right{
+    display: flex;
+    flex-flow: row wrap;
+}
+
+.square{
+    width: 50%;
+    height: 50%;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.square img{
+    width: 50%;
+    filter: invert(100%);
+}
+
+#center{
+    padding: 30px 40px;
+    background-color: #f5f5f5;
+
+    overflow: hidden;
+}
+
+#center img{
+    width: 60%;
+}
+
+#center img, #center p, #center span{
+    padding: 50px 0;
+}
+
+/* colore quadrati */
+
+.square:hover{
+    border: 10px solid rgba(255, 255, 255, 0.3);
+}
+
+
+#design{
+    background-color: #a2d39b;
+}
+
+#asu{
+    background-color: #61082b;
+}
+
+#usf{
+    background-color: #0093ce;
+}
+
+#topps{
+    background-color: #ff1c1c;
+}
+
+#wbr{
+    background-color: #d5001f;
+}
+
+#hc{
+    background-color: #b4d0e7;
+}
+
+#lp{
+    background-color: #0d2481;
+}
+
+#cc{
+    background-color: #ffd830;
+}
+
+/* /////////////////////////// */
