--- a/Correzione Prova/css/style.css
+++ b/Correzione Prova/css/style.css
@@ -23,6 +23,11 @@
     padding-top: 100px;
 }
 
+footer{
+    background-color: black;
+    color: white;
+}
+
 
 
 /* titoli */
@@ -514,3 +519,28 @@ ul{
 }
 
 /* ////////////////////// */
+
+/* footer_________________ */
+
+
+
+#footer-links{
+    padding: 50px 0;
+    display: flex;
+    justify-content: space-between;
+}
+
+#footer-links *{
+    padding: 8px 0;
+}
+
+#footer-links a{
+    color: white;
+    text-decoration: none;
+}
+
+#language{
+    width: 50%;
+    padding: 40px 0;
+}
+
